# Walpaperfy

./: .gitignore  Cargo.toml  README.md  getToken.js  token.py
src/: credentials.rs  env.rs  main.rs  sync.rs
