[package]
name = "walpaperfy"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
clap = { version = "4.5.24", features = ["derive"] }
cli_prompts_rs = "=0.3.0"
dotenvy = "0.15.7"
image = "0.25.5"
lazy_static = "1.5.0"
once_cell = "1.20.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
